metadata/unpackaged/objects/BIGM_Quote__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account on quote</description>
        <inlineHelpText>This is the account on the quote that is passed back to the BigMachines Object when a quote in synced to Salesforce.com</inlineHelpText>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIGM_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIGM_Delivery_Terms__c</fullName>
        <label>Delivery Terms</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIGM_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIGM_Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BIGM_Exw_Revenue__c</fullName>
        <label>Total EXW Revenue</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BIGM_INCO_Destination__c</fullName>
        <label>INCO Destination</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIGM_INCO_Terms__c</fullName>
        <label>INCO Terms</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIGM_Id__c</fullName>
        <externalId>true</externalId>
        <label>Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIGM_Margin__c</fullName>
        <label>Total Margin</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BIGM_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>BigMachines Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BIGM_Other_Delivery_Terms__c</fullName>
        <label>Other Delivery Terms</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIGM_Other_Payment_Terms__c</fullName>
        <label>Other Payment Terms</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIGM_Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIGM_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BIGM_Status__c</fullName>
        <label>Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIGM_Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BIGM_Total__c</fullName>
        <label>Total Revenue</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <formula>BIGM_Margin__c /  BIGM_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>BIGM_Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <description>Revision number of the BigMachines Quote</description>
        <inlineHelpText>This increments each time a new revision is created for a quote by hitting the revision button in BigMachines</inlineHelpText>
        <label>Revision</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quotation</label>
    <listViews>
        <fullName>Group</fullName>
        <columns>BIGM_Opportunity__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Revision__c</columns>
        <columns>BIGM_Description__c</columns>
        <columns>BIGM_Total__c</columns>
        <columns>BIGM_Margin__c</columns>
        <columns>BIGM_Payment_Terms__c</columns>
        <columns>BIGM_Other_Payment_Terms__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Sinopec</label>
    </listViews>
    <listViews>
        <fullName>Quotes</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>BIGM_Description__c</columns>
        <columns>BIGM_Total__c</columns>
        <columns>BIGM_Margin__c</columns>
        <columns>BIGM_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Quotes</label>
    </listViews>
    <nameField>
        <label>Quote Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>